# md-summarizer

./: .cursorrules  .gitignore  CHECKLIST.md  Makefile  README.md  project_structure  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: publish-test.yml  publish.yml  python-package.yml
.notes/: prompt_engineering.txt
src/: converter.py  main.py  md_parser.py  md_summarizer.py  openai_client.py
src/agent/: document_agent.py
src/config/: settings.py
src/md_summarizer/: __init__.py  models.py  summarizer.py
src/md_summarizer/agent/: __init__.py  agent.py  document_agent.py
src/md_summarizer/config/: __init__.py  settings.py
src/md_summarizer/core/: __init__.py  summarizer.py
src/md_summarizer/models/: __init__.py  section.py
src/md_summarizer/parser/: __init__.py  parser.py
src/md_summarizer/progress/: __init__.py  reporter.py  signals.py
src/prompts/: section_prompts.py  yaml_prompts.py
src/summarizer/: __init__.py  analyzer.py  api_analyzer.py  code_synthesizer.py  doc_processor.py  types.py  utils.py
tests/: conftest.py  example_doc.md  example_doc.yaml  example_doc_out.md  test_converter.py  test_md_parser.py  test_md_summarizer.py  test_openai_client.py
tests/utils/: assertions.py  output_formatter.py
~/: .pypirc
